fixes flicker in container when dropdown lists open - props to arthus fixes #284
git-svn-id: http://svn.habariproject.org/habari/trunk/htdocs/system@1638 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -164,6 +164,9 @@ body, textarea, #footer {
 	font-size: 9px;
 	list-style: none outside;
 	margin: 0 0 0 10px;
+	position:absolute;
+	top:0;
+	right:0;
 	}
 
  #page .dropbutton.alert {
